--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,32 @@
-.default_button {
-    border: none;
-    border-radius: 20px;
-    background-color: #4CAF50;
-    color: white;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+html {
+    display: block;
+    font-family: 'Roboto', sans-serif;
+}
+
+body {
+    display: flex;
+    margin: 16px;
+    padding: 16px;
+    justify-content: center;
+    align-items: center;
+    background-color: #87CEEB;
+}
+
+.title {
+    padding: 8px;
+    color: #4A4A4A;
+}
+
+@media (prefers-color-scheme: dark) {
+
+    body {
+        background-color: #0047AB;
+    }
+
+    .title {
+        color: #DADADA;
+    }
+
 }
